--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-Flask
-Flask-SQLAlchemy
-SQLAlchemy>=2.0
-psycopg2-binary
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.23
+Werkzeug==2.0.1
+psycopg2-binary==2.9.1
+python-dotenv==0.19.0
+gunicorn==20.1.0
+pandas==1.5.3
+numpy==1.24.3
 apscheduler
 fastapi==0.95.1
 uvicorn==0.22.0
 requests==2.28.2
-python-dotenv==1.0.0
 ccxt
 mysql-connector-python
-Flask==2.3.2
-pandas==2.1.0  
-numpy==1.25.0
